vendor/lib_tensorflow/graph.cr


  fun import_graph_def_options_set_uniquify_names = TF_ImportGraphDefOptionsSetUniquifyNames(options : X_ImportGraphDefOptions*, names : LibC::Char)
  fun import_graph_def_options_set_uniquify_prefix = TF_ImportGraphDefOptionsSetUniquifyPrefix(options : X_ImportGraphDefOptions*, prefix : LibC::Char)
  fun import_graph_def_options_add_input_mapping = TF_ImportGraphDefOptionsAddInputMapping(options : X_ImportGraphDefOptions*,
    source_name : LibC::Char*,
    source_index : LibC::Int,
    destination : Output
  ) : Void
  fun import_graph_def_options_remap_control_dependency = TF_ImportGraphDefOptionsRemapControlDependency(options : X_ImportGraphDefOptions*,
    source_name : LibC::Char*,
    destination : X_Operation*
  ) : Void
  fun import_graph_def_options_add_control_dependency = TF_ImportGraphDefOptionsAddControlDependency(options : X_ImportGraphDefOptions*, operation : X_Operation*) : Void
  fun import_graph_def_options_add_return_output = TF_ImportGraphDefOptionsAddReturnOutput(options : X_ImportGraphDefOptions*, name : LibC::Char*, index : LibC::Int) : Void
  fun import_graph_def_options_num_return_outputs = TF_ImportGraphDefOptionsNumReturnOutputs(options : X_ImportGraphDefOptions*) : LibC::Int
  fun import_graph_def_options_add_return_operation = TF_ImportGraphDefOptionsAddReturnOperation(options : X_ImportGraphDefOptions*, name : LibC::Char*) : Void
  fun import_graph_def_options_num_return_operations = TF_ImportGraphDefOptionsNumReturnOperations(options : X_ImportGraphDefOptions*) : LibC::Int
  fun import_graph_def_results_return_outputs = TF_ImportGraphDefResultsReturnOutputs(results : X_ImportGraphDefResults*,
    number_of_outputs : LibC::Int*,
    outputs : Output*
  ) : Void
  fun import_graph_def_results_return_operations = TF_ImportGraphDefResultsReturnOperations(results : X_ImportGraphDefResults,
    number_of_operations : LibC::Int*,
    operations : X_Operation*
  ) : Void
  fun import_graph_def_results_missing_unused_input_mappings = TF_ImportGraphDefResultsMissingUnusedInputMappings(results : X_ImportGraphDefResults*,
    number_of_missing_unused_input_mappings : LibC::Int*,
    source_names : LibC::Char***,
    source_indexes : LibC::Int**
  ) : Void

  fun delete_import_graph_def_results = TF_DeleteImportGraphDefResults(results : X_ImportGraphDefResults) : Void

  fun graph_import_graph_def_with_results = TF_GraphImportGraphDefWithResults(graph : X_Graph*,
    graph_def : Buffer*,
    options : X_ImportGraphDefOptions*,
    status : X_Status*
  ) : X_ImportGraphDefResults*

  fun graph_import_graph_def_with_return_outputs = TF_GraphImportGraphDefWithReturnOutputs(graph : X_Graph*,
    graph_def : Buffer*,
    options : X_ImportGraphDefOptions*,
    return_outputs : Output*,
    number_of_return_outputs : LibC::Int,
    status : X_Status*
  ) : Void

  fun graph_import_graph_def = TF_GraphImportGraphDef(graph : X_Graph*,
    graph_def : Buffer*,
    options : X_ImportGraphDefOptions*,
    status : X_Status*
  ) : Void

  fun graph_copy_function = TF_GraphCopyFunction(graph : X_Graph*,
    function : X_Function*,
    gradient : X_Function*,
    status : X_Status*
  ) : Void

  fun graph_num_of_functions = TF_GraphNumFunctions(graph : X_Graph*) : LibC::Int

  fun graph_get_functions = TF_GraphGetFunctions(graph : X_Graph*,
    functions : X_Function*,
    max_functions : LibC::Int,
    status : X_Status*
  ) : LibC::Int

  fun operation_to_node_def = TF_OperationToNodeDef(operation : X_Operation*,
    output_node_def : Buffer*,
    status : X_Status*
  ) : Void

  fun graph_to_function = TF_GraphToFunction(graph : X_Graph*,
    fn_name : LibC::Char*,
    append_hash_to_fn_name : LibC::Char,
    number_of_operations : LibC::Int,
    operations : X_Operation*,
    number_of_inputs : LibC::Int,
    inputs : Output*,
    number_of_outputs : LibC::Int,
    outputs : Output*,
    output_names : LibC::Char*,
    options : X_FunctionOptions*,
    description : LibC::Char,
    status : X_Status*
  )

  fun function_name = TF_FunctionName(func : X_Function*) : LibC::Char*

  fun function_to_function_def = TF_FunctionToFunctionDef(func : X_Function*,
    output_func_def : Buffer*,
    status : X_Status*
  ) : Void

  fun import_function_def = TF_FunctionImportFunctionDef(proto : Void*,
    proto_len : LibC::SizeT,
    status : X_Status*
  ) : X_Function*

  fun function_set_attr_value_proto = TF_FunctionSetAttrValueProto(func : X_Function*,
    attr_name : LibC::Char*,
    proto : Void*,
    proto_len : LibC::SizeT,
    status : X_Status*
  ) : Void

  fun function_get_attr_value_proto = TF_FunctionGetAttrValueProto(func : X_Function*,
    attr_name : LibC::Char*,
    output_attr_value : Buffer*,
    status : X_Status*
  ) : Void

  fun delete_function = TF_DeleteFunction(func : X_Function*) : Void

  fun try_evaluate_constant = TF_TryEvaluateConstant(graph : X_Graph*,
    output : Output,
    result : X_Tensor**,
    status : X_Status*
  ) : LibC::Char
end